<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">LeafCare</string>
    <string name="app_tagline">Nhận diện bệnh lá cây nhanh chóng &amp; chính xác</string>
    <string name="start_button">Bắt đầu</string>
    <string name="recent_diagnosis">Lịch sử chẩn đoán gần đây</string>
    <string name="home">Trang chủ</string>
    <string name="view_diagnosis">Xem chẩn đoán</string>
    <string name="suggestion">Đề xuất</string>

<string name="take_photo">Chụp ảnh lá</string>
<string name="choose_photo">Chọn ảnh</string>
<string name="view_suggestions">Xem gợi ý</string>
<string name="treatment_suggestions">Gợi ý xử lý</string>
    <string name="history">Lịch sử</string>
    <string name="setting">Cài đặt</string>
    <string name="chatbot">Trợ lý ảo</string>
    <string name="enter_message">Nhập tin nhắn...</string>
    <string name="send">Gửi</string>
    <string name="setting_text_lang">language</string>
    <string name="knowledge">Kiến thức cây trồng</string>
    <string name="settings">Cài đặt</string>
    <string name="capture_photo">Chụp ảnh</string>
    <string name="confirm_photo">Xác nhận</string>
    <string name="diagnosis_result">Kết quả chẩn đoán</string>
    <string name="result">Kết quả</string>
    <string name="confidence">Độ tin cậy</string>
    <string name="rediagnose">Chẩn đoán lại</string>
    <string name="back_to_home">Quay lại trang chủ</string>
    <string name="normal_leaf">Lá bình thường</string>
    <string name="disease_detected">Phát hiện bệnh</string>
    <string name="setting_title">Cài đặt</string>
    <string name="close_button">Đóng</string>
    <string name="theme_light">Sáng</string>
    <string name="theme_dark">Tối</string>
    <string name="language">English / Tiếng Việt</string>

    <string-array name="background_options">
        <item>Trắng</item>
        <item>Đen</item>
    </string-array>

<string-array name="languages_array">
    <item>Vietnamese</item>
    <item>English</item>
</string-array>
</resources>
