<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:background="@color/white">

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/setting_title"
        android:textSize="22sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:layout_marginBottom="16dp" />

    <TextView
        android:id="@+id/textLang"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/setting_text_lang"
        android:textSize="14sp"
        android:textColor="@color/black" />
    <Spinner
        android:id="@+id/spinnerLanguage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp" android:layout_marginBottom="16dp"/>

    <Switch
        android:id="@+id/switchTheme"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/theme_dark"
        android:textColor="@color/black"
        android:padding="8dp" />

</LinearLayout>
